rephrase first para

--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -41,7 +41,9 @@ If you’re syncing, something similar to the following should appear:
 14        449
 ```
 
-The first number is the **election epoch** and the second number is the **block height** of your validator. The **height** will be within 100 of the number displayed on [https://explorer.helium.com/](https://explorer.helium.com/) if your validator is caught up. This may take a few days if your validator is new.
+The first number is the **election epoch** and the second number is the **block height** of your validator.
+
+To be considered 'online' in [Explorer](https://explorer.helium.com/) and be eligible for election into a consensus group, your node must be **staked** and the **block height** needs to be caught up (within 100 blocks of the block height of the chain). You can view the current block height of the chain through the [Explorer](https://explorer.helium.com/). Block heights may sync slowly, it may take a few days if your validator is just coming online.
 
 ## View p2p summary
 
