link to param explanation

--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -47,7 +47,7 @@ To be considered 'online' in [Explorer](https://explorer.helium.com/) and be eli
 
 ## View p2p summary
 
-When your validator is running, you can check the summary of the connection, NAT, and block height:
+When your validator is running, you can check the summary of the connection, NAT, and block height. [These parameters are described in the Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide/#status-commands-to-run-on-the-validator-server).
 
 Source: ```miner info p2p_status```
 
