--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -30,9 +30,15 @@ To successfully deploy a Helium Validator, you'll need to do the following:
 - Install the [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs). You are welcome to build from source, but easiest to download the latest binary release.
 - Deploy a virtual server on a cloud service like AWS, GCP, Azure, or Digital Ocean. Or deploy a physical server on which to run the Validator. [The recommended hardware and networking requirements can be found here](/mine-hnt/validators/requirements/).
 
+:::warning
+
+You should be comfortable with running a Testnet Validator, have experience with Unix and Docker, and understand basic system administration (security, port mappings) to to run a Validator. There is no undo button in the blockchain!
+
+:::
+
 ## Create Wallet
 
-Once you have your [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) installed locally, it's time to create your Helium Wallet. Run the following command to create it. (This command format assumes you're using the executable. If you've built the wallet from source it'll look slightly different.) 
+Once you have your [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) installed locally, it's time to create your Helium Wallet. Run the following command to create it. (This command format assumes you're using the executable. If you've built the wallet from source it'll look slightly different.)
 
 At any time use -h or --help to get more help for a command.
 
@@ -43,7 +49,7 @@ It is a best practice to create your Helium CLI wallet on a separate machine fro
 :::
 
 ```
-helium-wallet create basic 
+helium-wallet create basic
 ```
 
 You'll be prompted to supply a new passphrase to complete it. This is used to encrypt/decrypt the `wallet.key` file, and is needed to sign transactions. **Don't lose it.**
@@ -90,7 +96,7 @@ The output will look similar to this:
 
 ## Each Validator Requires 10000 HNT
 
-Running a Validator on Mainnet requires a stake of `10000 HNT` per Validator. After you've created your wallet, transfer a little more than `10000 HNT` into it for each Validator you intend to run. 
+Running a Validator on Mainnet requires a stake of `10000 HNT` per Validator. After you've created your wallet, transfer a little more than `10000 HNT` into it for each Validator you intend to run.
 
 :::info
 
@@ -117,8 +123,8 @@ If nothing is returned from this command, your host system does not have AVX sup
 
 You have two options for deploying the Validator. You just need to do ONE of the following:
 
-- [Deploy the Validator Using Docker](#deploy-the-miner-using-docker)
-- [Build the Validator form Source](#deploy-miner-from-source)
+- [Deploy the Validator using Docker](#deploy-the-miner-using-docker)
+- [Build the Validator from Source](#deploy-miner-from-source)
 
 ### Deploy the Validator Using Docker
 
@@ -158,20 +164,20 @@ You can then use the `run` command to start your container for the first time:
 
 ```
 docker run -d --init \
---restart always \
---publish 2154:2154/tcp \
---publish 8080:8080/tcp \
---name validator \
---mount type=bind,source=$HOME/validator_data,target=/var/data \
-quay.io/team-helium/validator:latest-validator-amd64
+  --restart always \
+  --publish 2154:2154/tcp \
+  --publish 8080:8080/tcp \
+  --name validator \
+  --mount type=bind,source=$HOME/validator_data,target=/var/data \
+  quay.io/team-helium/validator:latest-validator-amd64
 ```
 
 - `-d` option runs in detached mode, which makes the command return or not; you may want to omit if you have a daemon manager running the docker for you.
-- `--init` to indicate that an init process should be used as the PID 1 in the container.  This ensures the usual responsibilities of an init system, such as reaping zombie processes, are performed inside the created container.  When `docker exec` commands are run, it's possible for these to create zombie processes on the host.  This eliminates that issue. You can read more about this [here](https://blog.phusion.nl/2015/01/20/docker-and-the-pid-1-zombie-reaping-problem/) and [here](https://docs.docker.com/engine/reference/commandline/run/).
+- `--init` to indicate that an init process should be used as the PID 1 in the container. This ensures the usual responsibilities of an init system, such as reaping zombie processes, are performed inside the created container. When `docker exec` commands are run, it's possible for these to create zombie processes on the host. This eliminates that issue. You can read more about this [here](https://blog.phusion.nl/2015/01/20/docker-and-the-pid-1-zombie-reaping-problem/) and [here](https://docs.docker.com/engine/reference/commandline/run/).
 - `--restart always` asks Docker to keep the image running, starting the image on boot and restarting the image if it crashes. Depending on how you installed Docker in your system, it'll start on boot.
 - `--publish 2154:2154/tcp` maps the port 2154 on the docker container to 2154 on the host machine. This allows inbound connections on port 2154 to the host machine to be routed to the validator container. In addition to this mapping, it is up to you to ensure that this port is available from the public internet to the host machine. This will require modifying firewall and/or security group settings in your cloud provider of choice.
 - `--publish 8080:8080/tcp` maps the port 8080 on the docker container to 8080 on the host machine. This allows inbound connections on port 8080 to the host machine to be routed to the validator container. In addition to this mapping, it is up to you to ensure that this port is available from the public internet to the host machine. This will require modifying firewall and/or security group settings in your cloud provider of choice.
-- `--name validator` names the container, which makes interacting with the docker easier, but feel free to name the container whatever you want.
+- `--name validator` names the container, which makes interacting with it easier, but feel free to name it whatever you want.
 - `--mount` the parameters above will mount the container's `/var/data/` directory to the systems directory `$HOME/validator_data`. You will want this folder to be persistent across runs of the docker container as it will contain both the blockchain data and the miner key of your Validator.
 - `quay.io/team-helium/validator:latest-validator-amd64` Lastly, this points to the docker **_image_** for the Validator that is tagged as the "latest" for the amd64 architecture. For arm architectures, replace with `latest-validator-arm64`.
 
@@ -231,7 +237,7 @@ Now that you have your Validator running, you need to [actually Stake tokens to 
 
 ### Deploy Miner from Source
 
-Ok, brave soul. Here's what you'll need to build and deploy the miner from source:
+Okay, brave soul. Here's what you'll need to build and deploy the miner from source:
 
 - miner
 - Erlang package (the latest 22 or 23 versions are supported, the 24 release candidate will NOT work)
@@ -368,7 +374,7 @@ Now that you're up and running with a Validator, there are a few things you can 
 
 ### Time Expectations
 
-The blockchain takes time. The distributed nature of verifying transactions into the blockchain takes time.  The validator information gossiped on the blockchain takes time.  APIs that run to update the [explorer](https://explorer.helium.com) are scheduled and have intervals.  Basically, you won't be able to run the validator and instantly see that everything is "good".
+The blockchain takes time. The distributed nature of verifying transactions into the blockchain takes time. The validator information gossiped on the blockchain takes time. APIs that run to update the [Explorer](https://explorer.helium.com) are scheduled and have intervals. Basically, you won't be able to run the validator and instantly see that everything is "good".
 
 After the validator has been up and running for 15 minutes, proceed with some of the steps below.
 
@@ -428,10 +434,10 @@ miner info p2p_status
 +---------+------+
 ```
 
-- `connected` means you have at least one connection to a peer (outgoing connections OK)
-- `dialable` means peers can reach you (incoming connections OK)
-- `nat_type` of `none` is best for validators. Anything else means the validator code thinks it is behind some kind of NAT
-- `height` is the currently synced block
+- `connected` means you have at least one connection to a peer (outgoing connections OK).
+- `dialable` means peers can reach you (incoming connections OK).
+- `nat_type` of `none` is best for validators. Anything else (`unknown` `symmetric`, `restricted`) means the validator code thinks it is behind some kind of NAT.
+- `height` is the currently synced block. Compare to the [Explorer block height](https://explorer.helium.com/blocks).
 
 ```
 miner peer book -s
@@ -439,7 +445,7 @@ miner peer book -s
 +------------------------------------------------+-------------+----------+---------+---+----------+
 |                    address                     |    name     |listen_add|connectio|nat|last_updat|
 +------------------------------------------------+-------------+----------+---------+---+----------+
-|/p2p/1YwLbGTCEhVbwKEehRVQRC8N3q35ydXTH1B6BQys5FB|short-umber-b|    1     |    4   |non| 111.88s  |
+|/p2p/1YwLbGTCEhVbwKEehRVQRC8N3q35ydXTH1B6BQys5FB|short-umber-b|    1     |    4    |non| 111.88s  |
 +------------------------------------------------+-------------+----------+---------+---+----------+
 
 +----------------------------+
@@ -463,6 +469,6 @@ You're looking for `listen_addrs`. If you don't have at least one, your Validato
 
 ### Check the Explorer
 
-Head over to the [Validator Mainnet Explorer](https://explorer-beta.helium.com/validators) and search for your Validator. This may take 10 to 15 minutes from the time that your Validator is both online and staked before it appears on explorer. You should see your 3-word validator name (`short-umber-bull` in the example above) listed. It may be easier to sort by `#`, descending, as your new Validator will be near the top of the list. Remember you can view the name of your validator through `miner info summary` or just `miner info name`. 
+Head over to the [Validator Mainnet Explorer](https://explorer-beta.helium.com/validators) and search for your Validator. This may take 10 to 15 minutes from the time that your Validator is both online and staked before it appears on Explorer. You should see your 3-word validator name (`short-umber-bull` in the example above) listed. It may be easier to sort by `#`, descending, as your new Validator will be near the top of the list. Remember you can view the name of your validator through `miner info summary` or just `miner info name`.
 
-Thank you for being a part of the Helium Validators initiative.
+Thank you for being a part of the Helium Validators initiative!
