--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -41,4 +41,27 @@ If you’re syncing, something similar to the following should appear:
 14        449
 ```
 
-The first number is the **election epoch** and the second number is the **block height** of your validator. 
+The first number is the **election epoch** and the second number is the **block height** of your validator.
+
+To be considered 'online' in [Explorer](https://explorer.helium.com/) and be eligible for election into a consensus group, your node must be **staked** and the **block height** needs to be caught up (within 100 blocks of the block height of the chain). You can view the current block height of the chain through the [Explorer](https://explorer.helium.com/). Block heights may sync slowly, it may take a few days if your validator is just coming online.
+
+## View p2p summary
+
+When your validator is running, you can check the summary of the connection, NAT, and block height. [These parameters are described in the Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide/#status-commands-to-run-on-the-validator-server).
+
+Source: ```miner info p2p_status```
+
+Docker: ```docker exec validator miner info p2p_status```
+
+If you are properly connected and staked, it should look similar to this:
+```
+~$ docker exec validator miner info p2p_status
++---------+------+
+|  name   |result|
++---------+------+
+|connected| yes  |
+|dialable | yes  |
+|nat_type | none |
+| height  |911834|
++---------+------+
+```
