Vanager is custodial + add link to MattLong6 video

--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -93,6 +93,7 @@ No. You must wait until the validator is out of the consensus group.
 * [HIP25 Hips Don't Lie](https://www.youtube.com/watch?v=qOEAxXaANkI) - An in-depth discussion of [HIP25](https://github.com/helium/HIP/blob/master/0025-validators.md), the foundational HIP for validators.
 * [Validator Staking Tutorial](https://www.youtube.com/watch?v=S3eIIAPP9rk) - Full video guide on how to deploy a Validator from `jcarl`.
 * [Validator Quickstart](https://www.youtube.com/watch?v=4szCWSDowro) - Short overview from `joey` on how to deploy and stake a Validator.
+* [Staking provider comparison](https://www.youtube.com/watch?v=pnW72u3ysbo) - Courtesy of **@MattLong6**. [HNT Staking Vendors](https://docs.google.com/spreadsheets/d/1xl5IjZY3xeAXTmnbLk2Ynedb9Ssd6yxRBwHixJQg8xM)
 
 ## Staking Providers
 
@@ -119,4 +120,4 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [StakeJoy](https://stakejoy.com)                             | Yes                     | No          | 5% comission on earnings                                            |
 | [StakeMyHNT](https://www.stakemyhnt.com)                     | Yes                     | Coming soon | $169 per month                                                      |
 | [Validators Pool](https://helium.bx-host.com)                | Yes                     | No          | $120 per month + 2% comission on earnings                           |
-| [Vanager](https://vanager.io)                                | Yes                     | Yes         | $4 per day + 3% comission on earnings                               |
+| [Vanager](https://vanager.io)                                | No                      | Yes         | $4 per day + 3% comission on earnings                               |
