--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -464,7 +464,7 @@ You're looking for `listen_addrs`. If you don't have at least one, your Validato
 ### Copying your swarm_key
 Your validator's `swarm_key` is located in the `validator_data/miner` directory
 
-In order to copy the swarm_key locally to your personal computer, you'll need to use scp (outside of/instead of an ssh session).  Replace the user name and IP address (`root@192.0.2.1`) in the example below with the actual user name and IP address of your docker container instance.
+In order to copy the `swarm_key` locally to your personal computer, you'll need to use scp (outside of/instead of an ssh session).  Replace the user name and IP address (`root@192.0.2.1`) in the example below with the actual user name and IP address of your docker container instance.
 
 ```
 scp root@192.0.2.1:validator_data/miner/swarm_key .
