--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -11,8 +11,11 @@ Due to the overwhelming demand for Hotspots, the community designed and approved
 
 The full process for approving and auditing new manafacturers is as follows ([originally outlined in this blog post](https://engineering.helium.com/2021/01/26/maker-audit.html)):
 
-1. Makers submit a HIP.
-2. DeWi and Community approve.
-3. Makers send hardware samples for Audit.
-4. Once Makers pass hardware audit, they are allowed to proceed to Network Integration.
-5. The final stage of Network Integration is being able to add Hotspots to the Onboarding Server.
+1. Makers submit a HIP19 Proposal.
+2. DeWi sends KYC/B request for documentation
+3. DeWi approves KYC/B and sends hardware audit information.
+4. Makers send hardware samples for audit.
+5. Makers obtain and send regulatory radio certifications.
+*steps 4 and 5 can happen at the same time
+6. Once Makers pass hardware audit, they are allowed to proceed to Network Integration.
+7. The final stage of Network Integration is being able to add Hotspots to the Onboarding Server.
