--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -117,3 +117,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [Chorus One](https://chorus.one/products/whitelabel-staking)
 * [Figment](https://figment.io/)
 * [Staked](https://staking.staked.us/helium-staking)
+* [Allnodes](https://www.allnodes.com)
