--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -12,7 +12,7 @@ Due to the overwhelming demand for Hotspots, the community designed and approved
 The full process for approving and auditing new manafacturers is as follows ([originally outlined in this blog post](https://engineering.helium.com/2021/01/26/maker-audit.html)):
 
 1. Makers submit a HIP19 Proposal.
-2. DeWi sends KYC/B request for documentation
+2. DeWi sends KYC/B request for documentation.
 3. DeWi approves KYC/B and sends hardware audit information.
 4. Makers send hardware samples for audit.
 5. Makers obtain and send regulatory radio certifications.
