a few more changes

--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -153,7 +153,7 @@ Introduced in [HIP25](https://github.com/helium/HIP/blob/master/0025-validators.
 for processing blocks and managing the blockchain consensus group. In return for securing the blockchain, Validators earn the 6% of HNT allocated 
 to the consensus group reward. To operate a Validator, one must stake 10,000 HNT.  
 
-* [Validators on the Helium Blockchain Explorer](https://explorer-beta.helium.com/validators)
+* [Validators on the Helium Blockchain Explorer](https://explorer.helium.com/validators)
 * [Deploy a Validator](/mine-hnt/validators)
 
 
