--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -48,7 +48,7 @@ Andrew Miller and the team at the University of Illinois, Urbana-Champaign.
 
 HBBFT is an asynchronous atomic broadcast protocol designed to enable a group of
 known nodes to achieve consensus over unreliable links. In Helium’s
-implementation, a consensus group of elected Hotspots receives encrypted
+implementation, a consensus group of [elected Validators](https://explorer-beta.helium.com/validators) receives encrypted
 transactions as inputs and proceeds to reach common agreement on the ordering of
 these transactions before forming a block and adding it to the blockchain.
 
@@ -65,24 +65,14 @@ censorship-resistant transactions.
 
 ## The Consensus Group Election
 
-A new Consensus Group \(CG\) is elected once per epoch. Currently there are `16` members elected to each consensus group, as defined in the `num_consensus_members` chain variable. As of [HIP 16](https://github.com/helium/HIP/blob/master/0016-random-consensus-group-election.md), all Hotspots active on the Helium Network are eligible to be elected to a consensus group and are selected at random. 
+A new Consensus Group \(CG\) is elected once per epoch. Currently there are `40` members elected to each consensus group, as defined in the `num_consensus_members` chain variable. 
 
-In addition to random selection, a geographic filter is applied to ensure there is adequate location diversity.  The Helium blockchain uses a system called [H3 for all aspects of geospatial representation within the network](https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5). **H3** lets you index a space into hexagons of varying resolutions, ranging from `H0` to `H15`,with each level representing a different hexagon size. \([The full breakdown is here](https://github.com/uber/h3/blob/master/website/docs/core-library/restable.md).\) Currently, we use the `H4` resolution as the filter for eligible Hotspots for a CG. Put another way, in an ideal election, no two Hotspots within the same `H4` resolution - _roughly 658.5 square miles_ - should end up in the same CG.
+:::info 
 
-#### Consensus Group Member Deselection
+For a more complete overview of how Validators are elected to the consensus group, see the [Election Process Documentation](/mine-hnt/validators/penalties/#the-election-process)
 
-Each election uses a phased approach to migrating out only a subset of the existing  Consensus Group Members out over a series of epochs. Specifically, each new Consensus Groups retains `12` of previous `16` members. This is done to make additional use of the CG members that have already been elected and have proven their ability to mine blocks and distribute `HNT`. Put another way:
+:::
 
-* Each election, typically four new Consensus Group members are elected. The other 12 are from the previous CG election. 
-* Once elected, a Hotspot can typically be part of up to four consecutive Consensus Groups.  
-* Poorly performing CG members are likely to be deselected before their four epoch limit is reached. 
-* Once a Hotspot is deselected from a Consensus Group, it's not eligible to be elected to another group until the other 15 members that were in its group are completely cycled out. This would be four elections into the future.
-
-## The Mining Process
-
-Following the election of a new Consensus Group, a distributed key generation phase occurs to bootstrap the threshold encryption key \(TPKE\). This TPKE is a cryptographic primitive that allows any Hotspot in the network to encrypt transactions to a master public key \(PK\) such that the Consensus group must work together to decrypt it.
-
-Hotspots are constantly submitting new transactions to the current consensus group. As they arrive, each consensus group member takes a random subset and forwards them around to other members of the group after encrypting them with their share of the master public key.
 
 ## Rewarding Hotspots
 
@@ -96,6 +86,6 @@ During the course of any epoch, Hotspots are rewarded for the following list of 
 * Transferring device data over the network 
 * Serving as consensus group member
 
-The Consensus Group members also split `6%` of all HNT mined, as well as any transaction fees collected during the epoch.
+The Consensus Group then splits `6%` of all HNT mined, as well as any transaction fees collected during the epoch.
 
-Each one of the above activities is recorded in a block using the `reward` transaction. At the completion of each epoch, all the individual `reward` transactions are grouped in a `rewards` transaction at which point all HNT mined in that epoch are distributed.
+Each one of the above activities is recorded in a block using the `reward` transaction. At the completion of each epoch, all the individual `reward` transactions are grouped in a `rewards` transaction at which point all $HNT mined in that epoch are distributed.
