--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -9,9 +9,8 @@ slug: /mine-hnt/data-only-hotspots
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-:::warning
-Adding Data Only Hotspots is not yet enabled on chain, but is expected to be
-released in early July. Earning $HNT for data transfer is expected to be enabled at a later time as part of Milestone 2. Please look for updates in #gateway-development channel. This guide is released for preparation only.
+:::info
+Adding Data Only Hotspots is now supported on chain. However, earning $HNT for data transfer is expected to be enabled at a later time as part of Milestone 2. Please look for updates in #gateway-development channel. 
 :::
 
 Data Only Hotspots are eligible for **Network Data Transfer Rewards** but not
