a few link fixes

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -206,9 +206,8 @@ time, know that you're not the only one earning less. And this is by design.
 ### Consensus Groups and Slow Block Times
 
 The only group that doesn't see its HNT reduced per epoch when blocks are slow
-is the Consensus Group. Currently there are 16 members of each Consensus Group,
-sharing 6% of the HNT produced per epoch - or approximately `12.842475` HNT per
-Consensus Group member.
+is the Consensus Group. Currently there are 40 members of each Consensus Group,
+sharing 6% of the HNT produced per epoch.
 
 This amount stays fixed while every other category of HNT payout is prorated so
 that members of the Consensus Group are incentivized to keep elections fast.
