--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -23,7 +23,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
                     <div>
                         <a href="/mine-hnt/hotspot-makers/approved-makers"><span class="badge badge--secondary">Approved Makers</span></a>
                         <a href="/mine-hnt/hotspot-makers/maker-approval-auditing"><span class="badge badge--secondary">Maker Approval</span></a>
-                        <a href="/use-the-network/build-a-packet-forwarder"><span class="badge badge--secondary">Packet Forwarder</span></a>	
+                        <a href="/mine-hnt/validators"><span class="badge badge--secondary">Run a Validator</span></a>	
                     </div>
                 </div>
             </div>
@@ -43,9 +43,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
     </div>
       <div class="col col--5 col--offset-1 "  style={{marginBottom: 100}}>
 		    <h5 style={{marginTop:0}}>Quick Links</h5>
-		    <a className="block" href="/mine-hnt/hotspot-makers/approved-makers"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Approved Makers</a>
-		    <a className="block" href="/mine-hnt/hotspot-makers/maker-approval-auditing"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Maker Approval and Auditing</a>
-		    <a className="block" href="/mine-hnt/hotspot-makers/hotspot-integration-testing"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Proof of Coverage</a>
+		    <a className="block" href="/mine-hnt/full-hotspots"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Approved Makers</a>
+		    <a className="block" href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Maker Approval and Auditing</a>
+		    <a className="block" href="/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Hotspot Integration Testing</a>
 	    </div>
   </div>
     <div class="row">
