--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -34,8 +34,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
   		<h2>Introduction</h2>
   	</div>
     <div class="col col--6">
-    	<p>The Helium Blockchain is based on a new, novel work algorithm called Proof of Coverage, and rewards miners in $HNT, the native token of the Helium blockchain. Officially launched on July 29, 2019, the Helium Blockchain is now running on over 10,000 Helium Miners across the world; and powers the largest, public, decentralized LoRaWAN Network in the world.</p>
-    	<p style={{marginBottom:50}}>If you are a developer and interested in contributing, or simply just interested in learning more, join us in the #blockchain channel on <a href="https://discord.gg/helium">our Discord</a>.</p>
+    	<p>The Helium Blockchain is based on a new, novel work algorithm called Proof of Coverage, and rewards miners in $HNT, the native token of the Helium blockchain. Officially launched on July 29, 2019, the Helium Blockchain is now running on over 80,000 Helium Miners across the world; and powers the largest, public, decentralized LoRaWAN Network in the world.</p>
+    	<p style={{marginBottom:50}}>If you are a developer and interested in contributing, or simply just interested in learning more, join us in the #blockchain-development channel on <a href="https://discord.gg/helium">our Discord</a>.</p>
     </div>
       <div class="col col--5 col--offset-1 "  style={{marginBottom: 100}}>
 		    <h5 style={{marginTop:0}}>Quick Links</h5>
