--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -26,7 +26,7 @@ Validators are a new entity on the Helium Blockchain that perform the work of th
 ## Mainnet
 
 * [Mainnet Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide) - How to get up and running with your a Validator on Mainnet. This guide covers staking, running, updating, and monitoring.
-* [Validator Mainnet Explorer](https://explorer-beta.helium.com/validators) - The easiest way to monitor the Validator magic on Mainnet. 
+* [Validator Mainnet Explorer](https://explorer.helium.com/validators) - The easiest way to monitor the Validator magic on Mainnet. 
 
 :::warning
 
