Update docs to reflect how the CG works in a post-validator world (#505)
* adding validators to primitives page

* several small tweaks to mining page

* a few more changes

* a few link fixes

* link fix

Co-authored-by: mark@helium.com <mark@helium.com>

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -30,7 +30,7 @@ according to the following distribution:
 | PoC Challenger        | Rewarded to any Hotspot that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. |
 | PoC Challengees       | Awarded to any Hotspot that transmits a POC packet after being targeted by the challenger.                                                   |
 | Witnesses             | Distributed to all Hotspots that witness a beacon packet as part of a PoC Challenge.                                       |
-| Consensus Group       | Divided equally among the 16 Hotspots that are part of outgoing Consensus Group, responsible for mining blocks.     |
+| Consensus Group       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.     |
 | Security              | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                      |
 | Network Data Transfer | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.      |
 
@@ -198,7 +198,7 @@ think blocks, not clocks. Here's a step-by-step example to make it clearer:
 
 The most important take away here is that, when block times slow and HNT
 production is reduced, everyone participating in the Network - Witnesses,
-Challengers, Helium, Investors, etc. - **is impacted equally** (with the
+Challengers, Security Token Holders, etc. - **is impacted equally** (with the
 exception of Consensus Group members; more on this below). So, although it's
 annoying that the effective rate of HNT may have dropped over a given period of
 time, know that you're not the only one earning less. And this is by design.
@@ -206,9 +206,8 @@ time, know that you're not the only one earning less. And this is by design.
 ### Consensus Groups and Slow Block Times
 
 The only group that doesn't see its HNT reduced per epoch when blocks are slow
-is the Consensus Group. Currently there are 16 members of each Consensus Group,
-sharing 6% of the HNT produced per epoch - or approximately `12.842475` HNT per
-Consensus Group member.
+is the Consensus Group. Currently there are 40 members of each Consensus Group,
+sharing 6% of the HNT produced per epoch.
 
 This amount stays fixed while every other category of HNT payout is prorated so
 that members of the Consensus Group are incentivized to keep elections fast.
