--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -98,7 +98,7 @@ wallet.
 At this point, you will want to be certain that you've backed up the
 light hotspot's keypair. Its location can be customized in the client's
 `settings.toml`, but by default, it's located at
-`/etc/helium_gateway/key.bin`
+`/etc/helium_gateway/gateway_key.bin`
 :::
 
 ## Assert Hotspot
