--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -118,3 +118,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [Figment](https://figment.io/)
 * [Staked](https://staking.staked.us/helium-staking)
 * [Allnodes](https://www.allnodes.com)
+* [Multipool APP](https://www.multipool.app)
