--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -70,7 +70,7 @@ The `localname` is the name used on the **Found Hotspots** page.
 If you’re using [Helium’s miner image](https://github.com/helium/miner), constructing a transaction is relatively easy. 
 
 Every Hotspot on the blockchain goes through two transactions:
-* **add hotspot**: links the Hotspot's key (`swarm_key`) of a Hotspot to a
+* **add hotspot**: links the Hotspot's key (`swarm_key`) to a
 user's wallet
 * **assert location**: provides GPS location, elevation (in meters), and dBi antenna
 output for the Hotspot
@@ -206,7 +206,6 @@ The final steps and flow for production onboarding are as follows:
 * If there are insufficient Data Credits in the maker account, the transaction will silently fail.
 
 :::
-
 
 
 
