--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -67,17 +67,43 @@ The `localname` is the name used on the **Found Hotspots** page.
 
 # Constructing the Add Gateway Transaction
 
-If you’re using [Helium’s miner image](https://github.com/helium/miner), constructing a transaction is relatively easy. For testing, you can use the following: 
+If you’re using [Helium’s miner image](https://github.com/helium/miner), constructing a transaction is relatively easy. 
+
+Every Hotspot on the blockchain goes through two transactions:
+* **add hotspot**: links the Hotspot's key (`swarm_key`) to a
+user's wallet
+* **assert location**: provides GPS location, elevation (in meters), and dBi antenna
+output for the Hotspot
+
+## Generate an Add Hotspot Transaction
+Use `gateway_config` to generate the `add hotspot` transaction, 
 
 ```
-payer = 138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr
+./helium_gateway add --owner WALLET_ADDRESS --payer WALLET_ADDRESS
 ```
+
+For testing, you'll set `payer` as `payer = 138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr`. In production, the Payer will be your unique Maker Account Address and will be provided at the appropriate stage with the Manufacturing Oversight Committee. The current list can be found [here](https://onboarding.dewi.org/api/v2/makers). 
 
 When testing with this `payer` address, adding hotspots and asserting location transactions will be submitted and you’ll see them as pending transactions in the Hotspot App. However, once it reaches the blockchain, the transaction will be discarded as the payer address does not exist in the blockchain’s `chain_var` of valid addresses. This ensures no Data Credits are spent on testing, but allows trial and error as Makers finish app integration.
 
 Once submitted, you can view the pending transaction using this API:
 
 * [https://api.helium.io/v1/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr/pending_transactions](https://api.helium.io/v1/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr/pending_transactions)
+
+The output is a JSON object:
+
+```
+{
+  "address": "11TL62V8NYvSTXmV5CZCjaucskvNR1Fdar1Pg4Hzmzk5tk2JBac",
+  "fee": 65000,
+  "mode": "full",
+  "owner": "14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz6S",
+  "payer": "138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr",
+  "staking fee": 4000000,
+  "txn": "CrkBCiEBrlImpYLbJ0z0hw5b4g9isRyPrgbXs9X+RrJ4pJJc9MkSIQA7yIy7F+9oPYCTmDz+v782GMJ4AC+jM+VfjvUgAHflWSJGMEQCIGfugfLkXv23vJcfwPYjLlMyzYhKp+Rg8B2YKwnsDHaUAiASkdxUO4fdS33D7vyid8Tulizo9SLEL1lduyvda9YVRCohAa5SJqWC2ydM9IcOW+IPYrEcj64G17PV/kayeKSSXPTJOMCEPUDo+wM="
+}
+```
+The `txn` output is then passed onto the Helium App over BLE, in QR code format, or through a deep link in this format: `helium://add_gateway/<txnoutput>?mac=<macaddress>`
 
 :::warning 
 
@@ -180,7 +206,6 @@ The final steps and flow for production onboarding are as follows:
 * If there are insufficient Data Credits in the maker account, the transaction will silently fail.
 
 :::
-
 
 
 
