Update Cotx gateways link

--- a/docs/use-the-network/light-hotspots/light-hotspots.mdx
+++ b/docs/use-the-network/light-hotspots/light-hotspots.mdx
@@ -172,7 +172,7 @@ All Hotspots will not need to follow the Blockchain.
 - [Kerlink gateways](/mine-hnt/light-hotspots/guides/kerlink)
   - Kerlink gateways will only mine HNT as Data Only Hotspot unless it is
     specified as a Helium-Compatible Kerlink Miner.
-- [Cotx gateways](/mine-hnt/light-hotspots/guides/cotx)
+- [Cotx gateways](/docs/use-the-network/light-hotspots/guides/cotx.mdx)
   - Cotx gateways will only mine HNT as a Data Only Hotspot.
 
 :::info
