--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -121,3 +121,5 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [StakeMyHNT](https://www.stakemyhnt.com)                     | Yes                     | Coming soon | $169 per month                                                      |
 | [Validators Pool](https://helium.bx-host.com)                | Yes                     | No          | $120 per month + 2% comission on earnings                           |
 | [Vanager](https://vanager.io)                                | No                      | Yes         | $4 per day + 3% comission on earnings                               |
+| [HostNodes](https://hostnodes.online)                        | Yes                     | No          | $119 per month  
+          | 10% off for 6 months plan, 20% off for 1 year plan
