--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -115,8 +115,7 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [Helium Staking](https://www.helium-staking.com)             | Yes                     | Yes         | $150 per month for non-custodial full node. 4% of rewards for pool. |
 | [HNT Staking](https://www.hntstaking.net)                    | Yes                     | Yes         | $149 per monthly or $3 per day + 3% commission on earnings"         |
 | [HNT Validators](https://www.hntvalidators.com)              | Yes                     | No          | $199 per month                                                      |
-| [HostNodes](https://hostnodes.online)                        | Yes                     | No          | $119 per month
-           | 10% discount for 6 months plan , 20% discount for 1 year plan
+| [HostNodes](https://hostnodes.online)                        | Yes                     | No          | $119 per month| 10% discount for 6 months plan, 20% discount for 1 year plan
 | [NodeValidators](https://nodevalidators.com)                 | Yes                     | Coming soon | $120 per month + 2.5% comission on earnings                         |
 | [Staked](https://staking.staked.us/helium-staking)           | Yes                     | No          |                                                                     | Does not have public pricing.
 | [StakeJoy](https://stakejoy.com)                             | Yes                     | No          | 5% comission on earnings                                            |
