Additional notes to light-hotspots.mdx

--- a/docs/use-the-network/light-hotspots/light-hotspots.mdx
+++ b/docs/use-the-network/light-hotspots/light-hotspots.mdx
@@ -173,7 +173,8 @@ All Hotspots will not need to follow the Blockchain.
   - Kerlink gateways will only mine HNT as Data Only Hotspot unless it is
     specified as a Helium-Compatible Kerlink Miner.
 - [Cotx gateways](/use-the-network/light-hotspots/guides/cotx)
-  - Cotx gateways will only mine HNT as a Data Only Hotspot.
+  - Cotx gateways will only mine HNT as a Data Only Hotspot unless it is
+    specified as a Helium-Compatible Cotx Miner.
 
 :::info
 
