Add warning in cotx.mdx

--- a/docs/use-the-network/light-hotspots/guides/cotx.mdx
+++ b/docs/use-the-network/light-hotspots/guides/cotx.mdx
@@ -2,6 +2,12 @@
 
 This guide provides instructions on how to configure a Cotx LoRaWAN gateways to work with the Helium network.
 
+:::warning
+
+Cotx gateways will only mine HNT through packet transfer, and is considered a non-PoC Light Hotspot. The ability to mine HNT with anything other than [Approved Hotspots](https://helium.com/mine) is not currently supported. Please join the [#gateway-development](https://discord.gg/helium) channel in the Helium Discord Server for the latest updates.
+
+:::
+
 ## Prerequisites
 
 Prior to configuring your Cotx gateways to work with the Helium network, please confirm that it is connected to the Internet and updated to the latest firmware. 
