add mode dataonly

--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -105,7 +105,7 @@ light hotspot's keypair. Its location can be customized in the client's
 
 To assert the Hotspot using the `helium-wallet hotspots assert`
 ```
-helium-wallet hotspots assert --gateway LIGHT_GATEWAY_PUBKEY --lat=37.7806295 --lon=-122.4008481
+helium-wallet hotspots assert --gateway LIGHT_GATEWAY_PUBKEY --lat=37.7806295 --lon=-122.4008481 --mode dataonly
 ```
 
 The `LIGHT_GATEWAY_PUBKEY` in the example from the previous section
