--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -14,6 +14,7 @@ or MQTT; or directly to cloud services like AWS IoT.
 
 Device Management includes:
 
+- Flows: a visual-centric view of the key elements in Console and allows users to instantly understand the relationship among devices, functions, and integrations.
 - Organization structure with labels, and user-level permissions
 - Device ID registration and seamless, secure onboarding and authentication
 - Data Credits for utilizing the Helium Network
