--- a/docs/use-the-network/console/data-credits.mdx
+++ b/docs/use-the-network/console/data-credits.mdx
@@ -36,7 +36,7 @@ The transaction is as follows:
   packet
 - The Helium LoRaWAN Network Server expresses interest in the packet and accepts
   delivery
-- The Miner provides the packet under the promise that the LongFi Network Server
+- The Miner provides the packet under the promise that the LoRaWAN Network Server
   will “burn a DC” in the name of the Miner
 
 You may have noticed that the final step includes a promise from the Helium
