--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -10,8 +10,11 @@ slug: /mine-hnt/data-only-hotspots
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::warning
-Adding Data Only Hotspots is not yet enabled on chain, but is expected to be
-released in early July. Earning $HNT for data transfer is expected to be enabled at a later time as part of Milestone 2. Please look for updates in #gateway-development channel. This guide is released for preparation only.
+Earning $HNT for data transfer is expected to be enabled at a later time as part of Milestone 2. Please look for updates in #gateway-development channel. This guide is released for preparation only.
+:::
+
+:::info
+Adding Data-Only Hotspots to the blockchain is now enabled. This is supported via CLI only.
 :::
 
 Data Only Hotspots are eligible for **Network Data Transfer Rewards** but not
