--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -33,6 +33,7 @@ things like:
 * [Understanding Hexagons](/wallets/app-wallet/hexagons)
 * [Discovery Mode](/wallets/app-wallet/discovery-mode)
 * [Transaction Failures](/wallets/app-wallet/transaction-failures)
+* [Fleet Mode](/wallets/app-wallet/fleet-mode)
 
 
 ## Hotspot Tab
