--- a/docs/use-the-network/light-hotspots/guides/cotx.mdx
+++ b/docs/use-the-network/light-hotspots/guides/cotx.mdx
@@ -4,7 +4,7 @@ This guide provides instructions on how to configure a Cotx LoRaWAN gateways to 
 
 :::warning
 
-Cotx gateways will only mine HNT through packet transfer, and is considered a non-PoC Light Hotspot. The ability to mine HNT with anything other than [Approved Hotspots](https://helium.com/mine) is not currently supported. Please join the [#gateway-development](https://discord.gg/helium) channel in the Helium Discord Server for the latest updates.
+Cotx gateways will only mine HNT through packet transfer, and is considered a non-PoC Light Hotspot. The ability to mine HNT with anything other than [Approved Hotspots](https://helium.com/mine) is not currently supported. Please join the [#gateway-development](https://discord.gg/helium) channel in the Helium Discord Server for the latest updates.(COTX X3 is Full hotspot Miner, Light hotspot and data only hotspot are other types of gateways in development.)
 
 :::
 
