--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -14,7 +14,7 @@ applications or send data directly over HTTP or MQTT.
 ## Add Integration
 
 To add a new integration, navigate to the **Integrations** page using the left
-side navigation, and then select from the available integrations as shown below.
+side navigation, click the Add New Integration **+** and then select from the available integrations as shown below.
 Follow the specific integration guides below for more details.
 
 <img
@@ -23,11 +23,7 @@ Follow the specific integration guides below for more details.
 
 ## Connecting Integrations to Devices
 
-Devices are connected to integrations through the use of Labels. Labels are
-named identifiers that can be used to associate an integration with a device. To
-connect one or more devices to one or more integrations, simply attach the same
-label to both the device and integration. Labels need to be created before
-attaching them to devices and integrations. \(See more instructions here.\)
+Devices or groups of devices (via labels) can be connected directly to Integrations on the Flows Worskpace. \(See more instructions here.\)
 
 [JSON Schema](/use-the-network/console/integrations/json-schema)
 
