--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -122,3 +122,4 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [StakeMyHNT](https://www.stakemyhnt.com)                     | Yes                     | Coming soon | $169 per month                                                      |
 | [Validators Pool](https://helium.bx-host.com)                | Yes                     | No          | $120 per month + 2% comission on earnings                           |
 | [Vanager](https://vanager.io)                                | No                      | Yes         | $4 per day + 3% comission on earnings                               |
+| [Multipool App](https://multipool.app)                       | Yes                     | Yes         | $119 per month for full node | Pooling per 100HNT staked $1.9 + 1.9% comission
