--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -38,3 +38,7 @@ most popular development boards and modules available.
 
 - [Browse Devices](/use-the-network/devices/development)
 - [Quickstart Guides](/use-the-network/devices/development/quickstart-guides)
+
+#### Video Guide for quick DIY device
+
+[![Link to YouTube tutorial](https://img.youtube.com/vi/J2f_AVx-WsE/0.jpg)](https://youtu.be/J2f_AVx-WsE)
