Add explanatory text to document.

--- a/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
+++ b/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
@@ -5,7 +5,10 @@ sidebar_label: Deep Links and QR Codes
 slug: /wallets/app-wallet/deep-links-and-qr-codes
 ---
 
-# Deep Links
+# Deep Links and External QR Codes (e.g. System Camera)
+
+To generate a QR code to scan, find a service to generate a QR code using the url's below.
+This is an example site: `https://www.qr-code-generator.com`
 
 ### View Hotspot
 
@@ -15,11 +18,16 @@ slug: /wallets/app-wallet/deep-links-and-qr-codes
 
 `helium://add_gateway/:base64url_encoded_txn`
 
+Users can read more on how to generate an `add_gateway` transaction from the [Makers Guide > Hotspot Integration](https://docs.helium.com/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing/#generate-an-add-hotspot-transaction).
+
 ### Assert Location
 
 // TODO: Not yet implemented
 
 # Internal QR Scanner
+
+To generate a QR code to scan, find a service to generate a QR code using the json data below.
+This is an example site: `https://www.qr-code-generator.com`
 
 ### Burn HNT
 
