integration and flows content
contains integration tweaks and flows content

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -26,6 +26,7 @@ Device Management includes:
 Console is available as a free to use hosted application at [console.helium.com](https://console.helium.com).
 
 * [Console Quickstart](/use-the-network/console/quickstart)
+* [Flows](/use-the-network/console/flows)
 * [Users and Organizations](/use-the-network/console/users)
 * [Data Credits](/use-the-network/console/data-credits)
 * [Adding Devices](/use-the-network/console/adding-devices)
