--- a/docs/use-the-network/light-hotspots/light-hotspots.mdx
+++ b/docs/use-the-network/light-hotspots/light-hotspots.mdx
@@ -175,6 +175,8 @@ All Hotspots will not need to follow the Blockchain.
 - [Cotx gateways](/use-the-network/light-hotspots/guides/cotx)
   - Cotx gateways will only mine HNT as a Data Only Hotspot unless it is
     specified as a Helium-Compatible Cotx Miner.
+- [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4](/use-the-network/light-hotspots/guides/rak-concentrators)
+  - This setup will only mine HNT as a Data Only Hotspot.
 
 :::info
 
